Fixes Gapminder/gapminder-tools-vizabi#16

--- a/src/components/_gapminder/timeslider/_timeslider.scss
+++ b/src/components/_gapminder/timeslider/_timeslider.scss
@@ -33,7 +33,7 @@ $vzb-ts-value-width: 40px;
                     fill: white;
                 }
             }
-            padding: 10px 14px;
+            padding: 12px 14px;
             margin: 5px;
             cursor: pointer;
             &.vzb-ts-btn-pause {
